<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/backgroundBlack">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_marginTop="200dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/email_text" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_centerHorizontal="true"
            android:layout_width="250dp"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_below="@id/emailTextView"/>

        <TextView
            android:id="@+id/passwordTextview"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailInput"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/passwordInput"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_below="@id/passwordTextview"
            android:layout_centerHorizontal="true"
            android:layout_width="250dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordInput"
            android:backgroundTint="@color/white"
            android:text="@string/login_text"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="50sp"
            android:paddingVertical="20sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/noAccountText"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:text="@string/no_account_text"/>

        <TextView
            android:id="@+id/registerRedirect"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/noAccountText"
            android:text="@string/register_here"/>


        <TextView
            android:id="@+id/errorText"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/registerRedirect" />

        <RelativeLayout
            android:layout_below="@id/errorText"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_marginHorizontal="50dp"
            android:background="@color/backgroundChooseLanguage"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/chooseLanguageText"
                android:text="@string/choose_language"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_below="@id/chooseLanguageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/langPolish"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginEnd="5dp"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/polish_text" />
                <TextView
                    android:id="@+id/langEnglish"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/english_text" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>