<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthorInformation"
    android:background="@color/backgroundBlack">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_text"
            android:textSize="50sp"
            android:layout_marginVertical="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/authorPhoto"
            android:src="@drawable/author"
            android:layout_below="@id/text"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/author_desc"/>

        <TextView
            android:id="@+id/authorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textSize="50sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@id/authorPhoto" />
    </RelativeLayout>

</ScrollView>