<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Language"
    android:background="@color/backgroundBlack">
    
    <TextView
        android:id="@+id/chooseLanguageText"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/choose_language" />

    <LinearLayout
        android:id="@+id/polish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingVertical="10dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:textSize="30sp"
            android:text="@string/polish_text"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingVertical="10dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:textSize="30sp"
            android:text="@string/english_text"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>