<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="@color/backgroundBlack">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:labelFor="@id/emailInput"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/email_text" />

        <EditText
            android:id="@+id/emailInput"
            android:autofillHints="emailAddress"
            android:layout_centerHorizontal="true"
            android:layout_width="250dp"
            android:layout_marginTop="5dp"
            android:inputType="textWebEmailAddress"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_below="@id/emailTextView"/>

        <TextView
            android:id="@+id/passwordTextview"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:labelFor="@id/passwordInput"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailInput"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/passwordInput"
            android:textSize="18sp"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_below="@id/passwordTextview"
            android:layout_centerHorizontal="true"
            android:layout_width="250dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/confirmPasswordTextView"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:labelFor="@id/confirmPasswordInput"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordInput"
            android:text="@string/confirm_password_text" />

        <EditText
            android:id="@+id/confirmPasswordInput"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_marginTop="5dp"
            android:layout_below="@id/confirmPasswordTextView"
            android:layout_centerHorizontal="true"
            android:layout_width="250dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/numberTextView"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:labelFor="@id/numberInput"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmPasswordInput"
            android:text="@string/phone_text" />

        <EditText
            android:id="@+id/numberInput"
            android:textSize="18sp"
            android:inputType="phone"
            android:autofillHints="phone"
            android:layout_marginTop="5dp"
            android:layout_below="@id/numberTextView"
            android:layout_centerHorizontal="true"
            android:layout_width="250dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:labelFor="@id/nameInput"
            android:layout_height="wrap_content"
            android:layout_below="@id/numberInput"
            android:text="@string/full_name_text" />

        <EditText
            android:id="@+id/nameInput"
            android:textSize="18sp"
            android:inputType="text"
            android:layout_marginTop="5dp"
            android:autofillHints="name"
            android:layout_below="@id/nameTextView"
            android:layout_centerHorizontal="true"
            android:layout_width="250dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameInput"
            android:backgroundTint="@color/white"
            android:text="@string/register_button_text"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="50sp"
            android:paddingVertical="20sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/alreadyText"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerButton"
            android:text="@string/already_have_account_text"/>

        <TextView
            android:id="@+id/loginRedirect"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/alreadyText"
            android:text="@string/login_here"/>


        <TextView
            android:id="@+id/errorText"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_below="@id/loginRedirect" />

    </RelativeLayout>

</ScrollView>